# MatrixChain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: matrix_chain.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/compare/: mul_performance.cpp
tests/deque_vector_compare/: main.cpp
tests/end2end/: test_runner.sh
tests/end2end/include/: end2end.hpp
tests/end2end/src/: end2end.cpp  main.cpp
tests/include/: vector_chain.hpp
tests/unit/: main.cpp  multiply.cpp
